--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,14 @@ pyrogram
 tgcrypto
 pytgcalls[pyrogram]
 python-dotenv
-youtube_dl
-youtube_search_python
+yt-dlp
+youtube-search-python
 requests
 aiohttp
 aiofiles
 asyncio
-youtube_search
-search_engine_parser
+youtube-search
+search-engine-parser
 ffmpeg-python
 pillow
 python-arq
